# nrf52840_static_partition_manager

./: CMakeLists.txt  README.md  custom_nrf52840.overlay  pm_static.yml  prj.conf
boards/arm/custom_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  custom_nrf52840-pinctrl.dtsi  custom_nrf52840.dts  custom_nrf52840.yaml  custom_nrf52840_defconfig
src/: filefs.c  filefs.h  main.c
